// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse: render should not render collapse component child if it is not valid react element 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
/>
`;

exports[`Collapse: render should render collapse component items and first item should be expanded 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    iconPosition="left"
    id="сid1"
    isActive={true}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="сid2"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items with custom id 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    iconPosition="left"
    id="сid1"
    isActive={false}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="сid2"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded item based on props when "defaultActiveKey" is provided 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    iconPosition="left"
    id="сid1"
    isActive={true}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="сid2"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded item by default 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    iconPosition="left"
    id="сid1"
    isActive={false}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="сid2"
    isActive={true}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded items based on "defaultActiveKey" 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    iconPosition="left"
    id="сid1"
    isActive={true}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="сid2"
    isActive={true}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with icon on the right 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    iconPosition="right"
    id="сid1"
    isActive={true}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="right"
    id="сid2"
    isActive={true}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse with mod 1`] = `
<div
  className="ui-collapse ui-collapse_collapse-mod"
>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.0"
    isActive={false}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.1"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return "accordion" collapse component with two items 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.0"
    isActive={false}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.1"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.0"
    isActive={false}
    key=".0"
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    iconPosition="left"
    id="ui-collapse-item.1"
    isActive={false}
    key=".1"
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;
